--- a/index.html
+++ b/index.html
@@ -237,8 +237,6 @@
       animation: logo-mark-appear 0.7s cubic-bezier(0.34, 1.56, 0.64, 1) 0.2s forwards;
       image-rendering: -webkit-optimize-contrast;
       image-rendering: crisp-edges;
-      filter: blur(0.3px);
-      -webkit-filter: blur(0.3px);
     }
 
     @keyframes logo-mark-appear {
@@ -421,6 +419,18 @@
     .btn-secondary:hover {
       background: var(--bg-muted);
       border-color: var(--border-hover);
+    }
+
+    .btn-inverted {
+      background: transparent;
+      color: var(--text-primary);
+      border: 1px solid var(--text-primary);
+    }
+
+    .btn-inverted:hover {
+      background: var(--text-primary);
+      color: var(--bg-base);
+      transform: translateY(-1px);
     }
 
     .btn-ghost {
@@ -1617,7 +1627,7 @@
           <a href="#platform" class="nav-link">Platform</a>
         </div>
         <div class="nav-cta">
-          <a href="https://sorka-ai.github.io/wikis/" class="nav-link" target="_blank">Docs</a>
+          <a href="https://sorka-ai.github.io/wikis/" class="btn btn-inverted" target="_blank">Documentation</a>
           <a href="#cta" class="btn btn-primary">Get Early Access</a>
         </div>
         <button class="mobile-toggle" id="mobileToggle" aria-label="Menu">
