Update color variables in index.html to enhance theme consistency and visual appeal, introducing new accent and blue shades for improved design coherence.

--- a/index.html
+++ b/index.html
@@ -112,9 +112,12 @@
       --text-muted: #7a6f63;
       --text-faint: #a2978b;
 
-      --accent-muted: rgba(0, 212, 170, 0.12);
-      --accent-glow: rgba(0, 212, 170, 0.25);
-      --blue-muted: rgba(0, 153, 255, 0.12);
+      --accent: #1f9a86;
+      --accent-bright: #37bda8;
+      --blue: #4b6f8a;
+      --accent-muted: rgba(31, 154, 134, 0.12);
+      --accent-glow: rgba(31, 154, 134, 0.22);
+      --blue-muted: rgba(75, 111, 138, 0.12);
 
       --border: rgba(43, 36, 32, 0.12);
       --border-hover: rgba(43, 36, 32, 0.2);
